# right-word-eeg

./: .env  .gitignore  FractalDimension.py  README.md  compare_images.ipynb  fft.py  get_data.py  hello.py  main.py  manifest.csv  manifest_1739892945834266839.csv  process_data.ipynb  pyproject.toml  results.ipynb
data/processed/: alpha_beta.csv  readme.md  readme2.md
